# VGP-Class-Code

./: .gitignore  CMakeLists.txt
.zed/: settings.json
Pix/: CMakeLists.txt  MathHelper.cpp  Pix.vcxproj  Pix.vcxproj.filters  PixEditor.cpp  TextEditor.cpp  TextEditor.h  VariableCache.cpp  VariableCache.h  WinMain.cpp  xconfig.json
Pix/Scripts/: character.pix  triangle.pix
X/: CMakeLists.txt
X/Inc/: XCore.h  XEngine.h  XMath.h  XTypes.h
X/Src/: AudioSystem.cpp  AudioSystem.h  Config.cpp  Config.h  Font.cpp  Font.h  GraphicsSystem.cpp  GraphicsSystem.h  Gui.cpp  Gui.h  InputSystem.cpp  InputSystem.h  PixelShader.cpp  PlatformMac.mm  Precompiled.h  SoundEffectManager.cpp  SoundEffectManager.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  TextureManager.cpp  Timer.cpp  Timer.h  VertexShader.cpp  Window.cpp  Window.h  XEngine.cpp
